--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.2.0",
+    "@clerk/nextjs": "^6.2.1",
+    "@clerk/themes": "^2.1.42",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
+    "mongoose": "^8.8.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
